--- a/menu.html
+++ b/menu.html
@@ -174,7 +174,7 @@
       </div>
     </div>
 
-    <footer class="footer">K-Street Food — menu kafe rumahan setiap hari.</footer>
+    <footer class="footer">K-Street Food — menu Korean Street food penuh cita rasa.</footer>
     <script src="script.js"></script>
   </body>
 </html>
