--- a/cerita.html
+++ b/cerita.html
@@ -38,6 +38,18 @@
         <div class="timeline">
           <article class="card reveal timeline-item">
             <div class="card-content">
+              <span class="tag">Log 18/02</span>
+              <h3>Riset trio minuman baru</h3>
+              <p class="muted">
+                Honey Citron Tea diuji dengan yujacha impor, diseduh 70°C supaya madu tidak hilang aromanya. Peach Iced Tea
+                kami gunakan teh hitam Ceylon dan sirup peach homemade agar aftertaste tidak pahit. Strawberry Milk dipakai
+                puree buah segar, bukan sirup, jadi warnanya soft pink alami.
+              </p>
+              <p><strong>Catatan dapur:</strong> Simpan base teh di chiller 4°C, campur madu atau puree setelah disajikan agar rasa tetap clean.</p>
+            </div>
+          </article>
+          <article class="card reveal timeline-item">
+            <div class="card-content">
               <span class="tag">Log 12/02</span>
               <h3>Uji gochujang homemade</h3>
               <p class="muted">
