--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                 <input id="name" name="name" type="text" placeholder="Nama lengkap" required />
 
                 <label for="email">Email</label>
-                <input id="email" name="email" type="email" placeholder="nama@emailkamu.com" required />
+                <input id="email" name="email" type="email" placeholder="nama@contoh.com" required />
 
                 <label for="interest">Jenis catering</label>
                 <select id="interest" name="interest">
