--- a/menu.html
+++ b/menu.html
@@ -38,6 +38,7 @@
         <div class="menu-tabs reveal">
           <button class="tab-btn active" data-menu-tab="food" type="button">Food</button>
           <button class="tab-btn" data-menu-tab="drink" type="button">Drink</button>
+          <button class="tab-btn" data-menu-tab="snack" type="button">Snack</button>
         </div>
 
         <!-- CODE MENU  -->
@@ -45,7 +46,7 @@
           <article class="card reveal" data-category="food" style="background: linear-gradient(145deg, rgba(255, 143, 177, 0.16), rgba(255, 255, 255, 0.92));">
             <div class="card-content">
               <button class="add-btn" data-name="Bibimbap" title="Tambah ke keranjang">+</button>
-              <img src="assets/Bibimbap.jpg" alt="Bibimbap" loading="lazy" />
+              <img src="assets/food/Bibimbap.jpg" alt="Bibimbap" loading="lazy" />
               <span class="tag">Rice Bowl</span>
               <h3>Bibimbap</h3>
               <p class="muted">Nasi hangat dengan sayur, telur mata sapi, bulgogi, gochujang.</p>
@@ -60,7 +61,7 @@
           <article class="card reveal" data-category="food" style="background: linear-gradient(160deg, rgba(143, 211, 244, 0.18), rgba(255, 255, 255, 0.94));">
             <div class="card-content">
               <button class="add-btn" data-name="Yangnyeom Chicken" title="Tambah ke keranjang">+</button>
-              <img src="assets/Yangnyeom_Chicken.jpg" alt="Yangnyeom Chicken" loading="lazy" />
+              <img src="assets/food/Yangnyeom_Chicken.jpg" alt="Yangnyeom Chicken" loading="lazy" />
               <span class="tag">Pedas</span>
               <h3>Yangnyeom Chicken</h3>
               <p class="muted">Ayam goreng krispi dengan saus gochujang manis pedas, tabur wijen.</p>
@@ -75,7 +76,7 @@
           <article class="card reveal" data-category="food" style="background: linear-gradient(145deg, rgba(255, 255, 255, 0.8), rgba(255, 143, 177, 0.18));">
             <div class="card-content">
               <button class="add-btn" data-name="Kimchi Jjigae" title="Tambah ke keranjang">+</button>
-              <img src="assets/Kimchi_Jjigae.jpg" alt="Kimchi Jjigae" loading="lazy" />
+              <img src="assets/food/Kimchi_Jjigae.jpg" alt="Kimchi Jjigae" loading="lazy" />
               <span class="tag">Sup</span>
               <h3>Kimchi Jjigae</h3>
               <p class="muted">Sup kimchi dengan tofu, irisan daging, daun bawang, kuah pedas gurih.</p>
@@ -90,7 +91,7 @@
           <article class="card reveal" data-category="food" style="background: linear-gradient(145deg, rgba(255, 143, 177, 0.12), rgba(255, 255, 255, 0.94));">
             <div class="card-content">
               <button class="add-btn" data-name="Tteokbokki" title="Tambah ke keranjang">+</button>
-              <img src="assets/Tteokbokki.jpg" alt="Tteokbokki" loading="lazy" />
+              <img src="assets/food/Tteokbokki.jpg" alt="Tteokbokki" loading="lazy" />
               <span class="tag">Street Food</span>
               <h3>Tteokbokki</h3>
               <p class="muted">Rice cake kenyal, fish cake, telur rebus, saus gochujang.</p>
@@ -105,7 +106,7 @@
           <article class="card reveal" data-category="food" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.18), rgba(255, 255, 255, 0.92));">
             <div class="card-content">
               <button class="add-btn" data-name="Jjajangmyeon" title="Tambah ke keranjang">+</button>
-              <img src="assets/Jjajangmyeon.jpg" alt="Jjajangmyeon" loading="lazy" />
+              <img src="assets/food/Jjajangmyeon.jpg" alt="Jjajangmyeon" loading="lazy" />
               <span class="tag">Noodle</span>
               <h3>Jjajangmyeon</h3>
               <p class="muted">Mie saus kacang hitam, daging cincang, kentang dan timun serut.</p>
@@ -117,10 +118,10 @@
               </div>
             </div>
           </article>
-          <article class="card reveal" data-category="food" style="background: linear-gradient(140deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.94));">
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(140deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.94));">
             <div class="card-content">
               <button class="add-btn" data-name="Hotteok" title="Tambah ke keranjang">+</button>
-              <img src="assets/Hotteok.jpg" alt="Hotteok" loading="lazy" />
+              <img src="assets/snack/Hotteok.jpg" alt="Hotteok" loading="lazy" />
               <span class="tag">Snack</span>
               <h3>Hotteok</h3>
               <p class="muted">Pancake isi brown sugar, kacang, dan kayu manis; disajikan hangat.</p>
@@ -132,11 +133,11 @@
               </div>
             </div>
           </article>
-          <article class="card reveal" data-category="food" style="background: linear-gradient(160deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.94));">
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(160deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.94));">
             <div class="card-content">
               <button class="add-btn" data-name="Kimbap" title="Tambah ke keranjang">+</button>
-              <img src="assets/Kimbap.jpg" alt="Kimbap" loading="lazy" />
-              <span class="tag">Roll</span>
+              <img src="assets/snack/Kimbap.jpg" alt="Kimbap" loading="lazy" />
+              <span class="tag">Snack</span>
               <h3>Kimbap</h3>
               <p class="muted">Nasi gulung rumput laut isi wortel, bayam, acar lobak, dan daging.</p>
               <p class="price-line"><strong>Harga:</strong> 32K • <strong>Ready:</strong> 6 menit</p>
@@ -147,11 +148,11 @@
               </div>
             </div>
           </article>
-          <article class="card reveal" data-category="food" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.18), rgba(255, 255, 255, 0.94));">
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.18), rgba(255, 255, 255, 0.94));">
             <div class="card-content">
               <button class="add-btn" data-name="Mandu" title="Tambah ke keranjang">+</button>
-              <img src="assets/Mandu.jpg" alt="Mandu" loading="lazy" />
-              <span class="tag">Dumpling</span>
+              <img src="assets/snack/Mandu.jpg" alt="Mandu" loading="lazy" />
+              <span class="tag">Snack</span>
               <h3>Mandu</h3>
               <p class="muted">Pangsit kukus/goreng isi daging dan sayur, disajikan dengan saus cuka pedas.</p>
               <p class="price-line"><strong>Harga:</strong> 30K • <strong>Ready:</strong> 7 menit</p>
@@ -165,7 +166,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.15), rgba(255, 255, 255, 0.88));">
             <div class="card-content">
               <button class="add-btn" data-name="Honey Citron Tea" title="Tambah ke keranjang">+</button>
-              <img src="assets/Honey_Citron_Tea.jpg" alt="Honey Citron Tea" loading="lazy" />
+              <img src="assets/drink/Honey_Citron_Tea.jpg" alt="Honey Citron Tea" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Honey Citron Tea</h3>
               <p class="muted">Teh hangat yujacha dengan aroma jeruk citron, madu, dan serat buah.</p>
@@ -180,7 +181,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(145deg, rgba(255, 143, 177, 0.16), rgba(255, 255, 255, 0.9));">
             <div class="card-content">
               <button class="add-btn" data-name="Strawberry Milk" title="Tambah ke keranjang">+</button>
-              <img src="assets/Strawberry_Milk.jpg" alt="Strawberry Milk" loading="lazy" />
+              <img src="assets/drink/Strawberry_Milk.jpg" alt="Strawberry Milk" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Strawberry Milk</h3>
               <p class="muted">Susu segar dengan puree stroberi dan krim ringan khas kafe Seoul.</p>
@@ -195,7 +196,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(160deg, rgba(143, 211, 244, 0.16), rgba(255, 255, 255, 0.9));">
             <div class="card-content">
               <button class="add-btn" data-name="Iced Americano" title="Tambah ke keranjang">+</button>
-              <img src="assets/Iced_Americano.jpg" alt="Iced Americano" loading="lazy" />
+              <img src="assets/drink/Iced_Americano.jpg" alt="Iced Americano" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Iced Americano</h3>
               <p class="muted">Kopi single origin diseduh dingin, rasa clean dan ringan untuk siang.</p>
@@ -210,7 +211,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(150deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.9));">
             <div class="card-content">
               <button class="add-btn" data-name="Peach Iced Tea" title="Tambah ke keranjang">+</button>
-              <img src="assets/Peach_Iced_Tea.jpg" alt="Peach Iced Tea" loading="lazy" />
+              <img src="assets/drink/Peach_Iced_Tea.jpg" alt="Peach Iced Tea" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Peach Iced Tea</h3>
               <p class="muted">Teh dingin dengan sirup peach, aroma segar dan rasa manis ringan.</p>
@@ -225,7 +226,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.16), rgba(255, 255, 255, 0.9));">
             <div class="card-content">
               <button class="add-btn" data-name="Matcha Latte" title="Tambah ke keranjang">+</button>
-              <img src="assets/Matcha_Latte.jpg" alt="Matcha Latte" loading="lazy" />
+              <img src="assets/drink/Matcha_Latte.jpg" alt="Matcha Latte" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Matcha Latte</h3>
               <p class="muted">Matcha Jepang dipadu susu creamy, disajikan hangat atau dingin.</p>
@@ -240,7 +241,7 @@
           <article class="card reveal" data-category="drink" style="background: linear-gradient(155deg, rgba(255, 143, 177, 0.12), rgba(255, 255, 255, 0.88));">
             <div class="card-content">
               <button class="add-btn" data-name="Korean Banana Milk" title="Tambah ke keranjang">+</button>
-              <img src="assets/Korean_Banana_Milk.jpg" alt="Korean Banana Milk" loading="lazy" />
+              <img src="assets/drink/Korean_Banana_Milk.jpg" alt="Korean Banana Milk" loading="lazy" />
               <span class="tag">Drink</span>
               <h3>Korean Banana Milk</h3>
               <p class="muted">Susu pisang gaya kios Seoul, rasa fruity lembut dan creamy.</p>
