--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
             </div>
           </div>
-          <div class="visual reveal has-img" style="--hero-img: url('assets/Tteokbokki.jpg');">
+          <div class="visual reveal has-img" style="--hero-img: url('assets/food/Tteokbokki.jpg');">
             <div class="orb"></div>
             <div class="grid-lines"></div>
             <div class="floating-card">
