--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
               <span class="tag">Pedas</span>
               <h3>Yangnyeom Chicken</h3>
               <p class="muted">Ayam goreng krispi dengan saus gochujang manis pedas, tabur wijen.</p>
-              <p class="price-line"><strong>Harga:</strong> 48K • <strong>Ready:</strong> 10 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 48K • <strong>Ready:</strong> 8 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Yangnyeom Chicken" type="button">-</button>
                 <span class="qty-value" data-name="Yangnyeom Chicken">0</span>
@@ -115,6 +115,51 @@
                 <button class="qty-btn cart-dec" data-name="Jjajangmyeon" type="button">-</button>
                 <span class="qty-value" data-name="Jjajangmyeon">0</span>
                 <button class="qty-btn cart-inc" data-name="Jjajangmyeon" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="food" style="background: linear-gradient(150deg, rgba(255, 143, 177, 0.15), rgba(255, 255, 255, 0.94));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Bulgogi Bowl" title="Tambah ke keranjang">+</button>
+              <img src="assets/food/Bulgogi_Bowl.jpg" alt="Bulgogi Bowl" loading="lazy" />
+              <span class="tag">Grill</span>
+              <h3>Bulgogi Bowl</h3>
+              <p class="muted">Daging sapi bulgogi manis-gurih dengan nasi hangat, kimchi, dan sayuran.</p>
+              <p class="price-line"><strong>Harga:</strong> 48K • <strong>Ready:</strong> 9 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Bulgogi Bowl" type="button">-</button>
+                <span class="qty-value" data-name="Bulgogi Bowl">0</span>
+                <button class="qty-btn cart-inc" data-name="Bulgogi Bowl" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="food" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.16), rgba(255, 255, 255, 0.94));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Dakgalbi" title="Tambah ke keranjang">+</button>
+              <img src="assets/food/Dakgalbi.jpg" alt="Dakgalbi" loading="lazy" />
+              <span class="tag">Pedas</span>
+              <h3>Dakgalbi</h3>
+              <p class="muted">Tumis ayam pedas gochujang dengan kol, tteok, dan wijen panggang.</p>
+              <p class="price-line"><strong>Harga:</strong> 47K • <strong>Ready:</strong> 9 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Dakgalbi" type="button">-</button>
+                <span class="qty-value" data-name="Dakgalbi">0</span>
+                <button class="qty-btn cart-inc" data-name="Dakgalbi" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="food" style="background: linear-gradient(145deg, rgba(143, 211, 244, 0.18), rgba(255, 255, 255, 0.92));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Samgyetang" title="Tambah ke keranjang">+</button>
+              <img src="assets/food/Samgyetang.jpg" alt="Samgyetang" loading="lazy" />
+              <span class="tag">Sup</span>
+              <h3>Samgyetang</h3>
+              <p class="muted">Sup ayam ginseng dengan nasi ketan, kurma merah, dan bawang putih.</p>
+              <p class="price-line"><strong>Harga:</strong> 52K • <strong>Ready:</strong> 9 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Samgyetang" type="button">-</button>
+                <span class="qty-value" data-name="Samgyetang">0</span>
+                <button class="qty-btn cart-inc" data-name="Samgyetang" type="button">+</button>
               </div>
             </div>
           </article>
@@ -253,6 +298,112 @@
               </div>
             </div>
           </article>
+          <!-- Tambahan untuk melengkapi 8 hidangan per kategori -->
+          <article class="card reveal" data-category="drink" style="background: linear-gradient(160deg, rgba(255, 143, 177, 0.14), rgba(255, 255, 255, 0.9));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Dalgona Coffee" title="Tambah ke keranjang">+</button>
+              <img src="assets/drink/Dalgona_Coffee.jpg" alt="Dalgona Coffee" loading="lazy" />
+              <span class="tag">Drink</span>
+              <h3>Dalgona Coffee</h3>
+              <p class="muted">Kopi susu dingin dengan foam dalgona creamy dan aroma karamel.</p>
+              <p class="price-line"><strong>Harga:</strong> 27K <strong>Ready:</strong> 3 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Dalgona Coffee" type="button">-</button>
+                <span class="qty-value" data-name="Dalgona Coffee">0</span>
+                <button class="qty-btn cart-inc" data-name="Dalgona Coffee" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="drink" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.15), rgba(255, 255, 255, 0.9));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Yuzu Sparkling" title="Tambah ke keranjang">+</button>
+              <img src="assets/drink/Yuzu_Sparkling.jpg" alt="Yuzu Sparkling" loading="lazy" />
+              <span class="tag">Drink</span>
+              <h3>Yuzu Sparkling</h3>
+              <p class="muted">Soda yuzu segar dengan potongan citrus, rasa asam manis menyegarkan.</p>
+              <p class="price-line"><strong>Harga:</strong> 26K <strong>Ready:</strong> 2 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Yuzu Sparkling" type="button">-</button>
+                <span class="qty-value" data-name="Yuzu Sparkling">0</span>
+                <button class="qty-btn cart-inc" data-name="Yuzu Sparkling" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(150deg, rgba(255, 143, 177, 0.16), rgba(255, 255, 255, 0.92));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Corn Dog Korea" title="Tambah ke keranjang">+</button>
+              <img src="assets/snack/Corn_Dog_Korea.jpg" alt="Corn Dog Korea" loading="lazy" />
+              <span class="tag">Snack</span>
+              <h3>Corn Dog Korea</h3>
+              <p class="muted">Corn dog renyah isi sosis-mozzarella, gula tipis, saus pedas manis.</p>
+              <p class="price-line"><strong>Harga:</strong> 25K <strong>Ready:</strong> 6 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Corn Dog Korea" type="button">-</button>
+                <span class="qty-value" data-name="Corn Dog Korea">0</span>
+                <button class="qty-btn cart-inc" data-name="Corn Dog Korea" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(145deg, rgba(143, 211, 244, 0.14), rgba(255, 255, 255, 0.92));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Odeng Kuah" title="Tambah ke keranjang">+</button>
+              <img src="assets/snack/Odeng_Kuah.jpg" alt="Odeng Kuah" loading="lazy" />
+              <span class="tag">Snack</span>
+              <h3>Odeng Kuah</h3>
+              <p class="muted">Fish cake tusuk dalam kaldu hangat, topping daun bawang.</p>
+              <p class="price-line"><strong>Harga:</strong> 23K <strong>Ready:</strong> 5 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Odeng Kuah" type="button">-</button>
+                <span class="qty-value" data-name="Odeng Kuah">0</span>
+                <button class="qty-btn cart-inc" data-name="Odeng Kuah" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(145deg, rgba(255, 143, 177, 0.15), rgba(255, 255, 255, 0.94));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Gimbap Mini" title="Tambah ke keranjang">+</button>
+              <img src="assets/snack/Gimbap_Mini.jpg" alt="Gimbap Mini" loading="lazy" />
+              <span class="tag">Snack</span>
+              <h3>Gimbap Mini</h3>
+              <p class="muted">Gimbap ukuran mini isi sayur dan daging asap, praktis untuk camilan.</p>
+              <p class="price-line"><strong>Harga:</strong> 20K <strong>Ready:</strong> 5 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Gimbap Mini" type="button">-</button>
+                <span class="qty-value" data-name="Gimbap Mini">0</span>
+                <button class="qty-btn cart-inc" data-name="Gimbap Mini" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(150deg, rgba(143, 211, 244, 0.15), rgba(255, 255, 255, 0.92));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Bungeoppang" title="Tambah ke keranjang">+</button>
+              <img src="assets/snack/Bungeoppang.jpg" alt="Bungeoppang" loading="lazy" />
+              <span class="tag">Snack</span>
+              <h3>Bungeoppang</h3>
+              <p class="muted">Roti ikan isi custard/bean paste, disajikan hangat manis.</p>
+              <p class="price-line"><strong>Harga:</strong> 19K <strong>Ready:</strong> 6 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Bungeoppang" type="button">-</button>
+                <span class="qty-value" data-name="Bungeoppang">0</span>
+                <button class="qty-btn cart-inc" data-name="Bungeoppang" type="button">+</button>
+              </div>
+            </div>
+          </article>
+          <article class="card reveal" data-category="snack" style="background: linear-gradient(150deg, rgba(255, 143, 177, 0.16), rgba(255, 255, 255, 0.92));">
+            <div class="card-content">
+              <button class="add-btn" data-name="Gamja Twigim" title="Tambah ke keranjang">+</button>
+              <img src="assets/snack/Gamja Twigim.jpg" alt="Gamja Twigim" loading="lazy" />
+              <span class="tag">Snack</span>
+              <h3>Gamja Twigim</h3>
+              <p class="muted">Kentang goreng ala street food Korea, renyah di luar lembut di dalam.</p>
+              <p class="price-line"><strong>Harga:</strong> 18K <strong>Ready:</strong> 5 menit</p>
+              <div class="qty-row" style="margin-top:6px;">
+                <button class="qty-btn cart-dec" data-name="Gamja Twigim" type="button">-</button>
+                <span class="qty-value" data-name="Gamja Twigim">0</span>
+                <button class="qty-btn cart-inc" data-name="Gamja Twigim" type="button">+</button>
+              </div>
+            </div>
+          </article>
         </div>
       </div>
     </main>
@@ -271,7 +422,9 @@
       </div>
     </div>
 
-    <footer class="footer">K-Street Food — menu Korean Street food penuh cita rasa.</footer>
+    <footer class="footer">K-Street Food â€” menu Korean Street food penuh cita rasa.</footer>
     <script src="script.js"></script>
   </body>
 </html>
+
+
