--- a/menu.html
+++ b/menu.html
@@ -422,7 +422,7 @@
       </div>
     </div>
 
-    <footer class="footer">K-Street Food • menu Korean Street food penuh cita rasa.</footer>
+    <footer class="footer">K-Street Food — menu Korean Street food penuh cita rasa.</footer>
     <script src="script.js"></script>
   </body>
 </html>
