--- a/menu.html
+++ b/menu.html
@@ -215,7 +215,7 @@
               <span class="tag">Drink</span>
               <h3>Honey Citron Tea</h3>
               <p class="muted">Teh hangat yujacha dengan aroma jeruk citron, madu, dan serat buah.</p>
-              <p class="price-line"><strong>Harga:</strong> 25K <strong>Ready:</strong> 4 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 25K • <strong>Ready:</strong> 4 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Honey Citron Tea" type="button">-</button>
                 <span class="qty-value" data-name="Honey Citron Tea">0</span>
@@ -230,7 +230,7 @@
               <span class="tag">Drink</span>
               <h3>Strawberry Milk</h3>
               <p class="muted">Susu segar dengan puree stroberi dan krim ringan khas kafe Seoul.</p>
-              <p class="price-line"><strong>Harga:</strong> 28K <strong>Ready:</strong> 3 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 28K • <strong>Ready:</strong> 3 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Strawberry Milk" type="button">-</button>
                 <span class="qty-value" data-name="Strawberry Milk">0</span>
@@ -245,7 +245,7 @@
               <span class="tag">Drink</span>
               <h3>Iced Americano</h3>
               <p class="muted">Kopi single origin diseduh dingin, rasa clean dan ringan untuk siang.</p>
-              <p class="price-line"><strong>Harga:</strong> 22K <strong>Ready:</strong> 2 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 22K • <strong>Ready:</strong> 2 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Iced Americano" type="button">-</button>
                 <span class="qty-value" data-name="Iced Americano">0</span>
@@ -260,7 +260,7 @@
               <span class="tag">Drink</span>
               <h3>Peach Iced Tea</h3>
               <p class="muted">Teh dingin dengan sirup peach, aroma segar dan rasa manis ringan.</p>
-              <p class="price-line"><strong>Harga:</strong> 24K <strong>Ready:</strong> 3 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 24K • <strong>Ready:</strong> 3 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Peach Iced Tea" type="button">-</button>
                 <span class="qty-value" data-name="Peach Iced Tea">0</span>
@@ -275,7 +275,7 @@
               <span class="tag">Drink</span>
               <h3>Matcha Latte</h3>
               <p class="muted">Matcha Jepang dipadu susu creamy, disajikan hangat atau dingin.</p>
-              <p class="price-line"><strong>Harga:</strong> 30K <strong>Ready:</strong> 4 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 30K • <strong>Ready:</strong> 4 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Matcha Latte" type="button">-</button>
                 <span class="qty-value" data-name="Matcha Latte">0</span>
@@ -290,7 +290,7 @@
               <span class="tag">Drink</span>
               <h3>Korean Banana Milk</h3>
               <p class="muted">Susu pisang gaya kios Seoul, rasa fruity lembut dan creamy.</p>
-              <p class="price-line"><strong>Harga:</strong> 26K <strong>Ready:</strong> 3 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 26K • <strong>Ready:</strong> 3 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Korean Banana Milk" type="button">-</button>
                 <span class="qty-value" data-name="Korean Banana Milk">0</span>
@@ -306,7 +306,7 @@
               <span class="tag">Drink</span>
               <h3>Dalgona Coffee</h3>
               <p class="muted">Kopi susu dingin dengan foam dalgona creamy dan aroma karamel.</p>
-              <p class="price-line"><strong>Harga:</strong> 27K <strong>Ready:</strong> 3 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 27K • <strong>Ready:</strong> 3 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Dalgona Coffee" type="button">-</button>
                 <span class="qty-value" data-name="Dalgona Coffee">0</span>
@@ -321,7 +321,7 @@
               <span class="tag">Drink</span>
               <h3>Yuzu Sparkling</h3>
               <p class="muted">Soda yuzu segar dengan potongan citrus, rasa asam manis menyegarkan.</p>
-              <p class="price-line"><strong>Harga:</strong> 26K <strong>Ready:</strong> 2 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 26K • <strong>Ready:</strong> 2 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Yuzu Sparkling" type="button">-</button>
                 <span class="qty-value" data-name="Yuzu Sparkling">0</span>
@@ -336,7 +336,7 @@
               <span class="tag">Snack</span>
               <h3>Corn Dog Korea</h3>
               <p class="muted">Corn dog renyah isi sosis-mozzarella, gula tipis, saus pedas manis.</p>
-              <p class="price-line"><strong>Harga:</strong> 25K <strong>Ready:</strong> 6 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 25K • <strong>Ready:</strong> 6 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Corn Dog Korea" type="button">-</button>
                 <span class="qty-value" data-name="Corn Dog Korea">0</span>
@@ -351,7 +351,7 @@
               <span class="tag">Snack</span>
               <h3>Odeng Kuah</h3>
               <p class="muted">Fish cake tusuk dalam kaldu hangat, topping daun bawang.</p>
-              <p class="price-line"><strong>Harga:</strong> 23K <strong>Ready:</strong> 5 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 23K • <strong>Ready:</strong> 5 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Odeng Kuah" type="button">-</button>
                 <span class="qty-value" data-name="Odeng Kuah">0</span>
@@ -366,7 +366,7 @@
               <span class="tag">Snack</span>
               <h3>Gimbap Mini</h3>
               <p class="muted">Gimbap ukuran mini isi sayur dan daging asap, praktis untuk camilan.</p>
-              <p class="price-line"><strong>Harga:</strong> 20K <strong>Ready:</strong> 5 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 20K • <strong>Ready:</strong> 5 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Gimbap Mini" type="button">-</button>
                 <span class="qty-value" data-name="Gimbap Mini">0</span>
@@ -381,7 +381,7 @@
               <span class="tag">Snack</span>
               <h3>Bungeoppang</h3>
               <p class="muted">Roti ikan isi custard/bean paste, disajikan hangat manis.</p>
-              <p class="price-line"><strong>Harga:</strong> 19K <strong>Ready:</strong> 6 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 19K • <strong>Ready:</strong> 6 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Bungeoppang" type="button">-</button>
                 <span class="qty-value" data-name="Bungeoppang">0</span>
@@ -396,7 +396,7 @@
               <span class="tag">Snack</span>
               <h3>Gamja Twigim</h3>
               <p class="muted">Kentang goreng ala street food Korea, renyah di luar lembut di dalam.</p>
-              <p class="price-line"><strong>Harga:</strong> 18K <strong>Ready:</strong> 5 menit</p>
+              <p class="price-line"><strong>Harga:</strong> 18K • <strong>Ready:</strong> 5 menit</p>
               <div class="qty-row" style="margin-top:6px;">
                 <button class="qty-btn cart-dec" data-name="Gamja Twigim" type="button">-</button>
                 <span class="qty-value" data-name="Gamja Twigim">0</span>
