--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
               </p>
             </div>
           </article>
+          <article class="card reveal feature-card" data-menu='["Bulgogi Bowl","Dakgalbi"]'>
+            <div class="card-content">
+              <span class="tag">Grill</span>
+              <h3>Bulgogi & dakgalbi</h3>
+              <p class="muted">Daging bulgogi manis-gurih dan dakgalbi pedas, duet favorit pecinta grill.</p>
+            </div>
+          </article>
+          <article class="card reveal feature-card" data-menu='["Samgyetang","Kimchi Jjigae"]'>
+            <div class="card-content">
+              <span class="tag">Soup</span>
+              <h3>Sup hangat</h3>
+              <p class="muted">Samgyetang ginseng dan kimchi jjigae pedas-gurih untuk menu comfort.</p>
+            </div>
+          </article>
+          <article class="card reveal feature-card" data-menu='["Dalgona Coffee","Yuzu Sparkling"]'>
+            <div class="card-content">
+              <span class="tag">Drink</span>
+              <h3>Signature drink</h3>
+              <p class="muted">Foam dalgona karamel dan soda yuzu segar, teman ngemil ringan.</p>
+            </div>
+          </article>
+          <article class="card reveal feature-card" data-menu='["Corn Dog Korea","Gamja Twigim"]'>
+            <div class="card-content">
+              <span class="tag">Snack</span>
+              <h3>Street snack</h3>
+              <p class="muted">Corn dog sosis-mozzarella dan kentang goreng ala Korea, siap dibawa pulang.</p>
+            </div>
+          </article>
         </div>
       </div>
     </main>
